feat: filter 에러 구분